# epai-file-format

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  configure.scan  perl.exe.stackdump
chk/: Makefile.am
dec/: Makefile.am
doc/: compression.txt  specification.txt
enc/: Makefile.am  image_compress.c
lib/: Makefile.am  checksum.c  checksum.h  common.h  decoder.c  decoder.h  encoder.c  encoder.h  epai.c  epai.h  error.c  error.h  file.c  file.h  file_signature.c  file_signature.h  generic_section.c  generic_section.h  metadata.c  metadata.h  padding.c  padding.h  types.h
lib/algo/: compress_image_simple.c
lib/sectiontypes/: file_signature.c  file_signature.h  file_signature_types.h  metadata.c  metadata.h  metadata_types.h  padding.c  padding.h  padding_types.h  pixelfmt.c  pixelfmt.h  pixelfmt_types.h  sectiontypes.h
poke/: Makefile.am  main.c
tests/: README  metadata-test.epai  paddonly.epai  unc-nopadd.epai  unc-stripped.epai  unc.epai
txt/: Makefile.am  main.c
