lib_LTLIBRARIES = libepai.la

libepai_la_SOURCES = epai.h types.h common.h error.h error.c generic_section.h generic_section.c file_signature.h file_signature.c padding.h padding.c metadata.h metadata.c checksum.h checksum.c file.h file.c encoder.h encoder.c decoder.h decoder.c

# Public headers.
include_HEADERS = epai.h types.h error.h generic_section.h file_signature.h padding.h metadata.h checksum.h file.h encoder.h decoder.h
