lib_LTLIBRARIES = libepai.la

libepai_la_SOURCES = epai.h \
		     types.h \
		     common.h \
		     error.h \
		     error.c \
		     generic_section.h \
		     generic_section.c \
		     file.h \
		     file.c \
		     encoder.h \
		     encoder.c \
		     decoder.h \
		     decoder.c \
		     sectiontypes/file_signature.h \
		     sectiontypes/file_signature.c \
		     sectiontypes/padding.h \
		     sectiontypes/padding.c \
		     sectiontypes/metadata.h \
		     sectiontypes/metadata.c \
		     sectiontypes/pixelfmt.h \
		     sectiontypes/pixelfmt.c \
		     checksum.h \
		     checksum.c

# Public headers.
include_HEADERS = epai.h \
		  types.h \
		  error.h \
		  generic_section.h \
		  file.h \
		  encoder.h \
		  decoder.h \
		  sectiontypes/file_signature.h \
		  sectiontypes/padding.h \
		  sectiontypes/metadata.h \
		  sectiontypes/pixelfmt.h \
		  checksum.h
