lib_LTLIBRARIES = libepai.la

libepai_la_SOURCES = epai.h \
		     common.h \
		     error.h \
		     error.c \
		     generic_section.h \
		     generic_section.c \
		     file.h \
		     file.c \
		     encoder.h \
		     encoder.c \
		     decoder.h \
		     decoder.c \
		     sectiontypes/sectiontypes.h \
		     sectiontypes/file_signature.h \
		     sectiontypes/file_signature_types.h \
		     sectiontypes/file_signature.c \
		     sectiontypes/padding.h \
		     sectiontypes/padding_types.h \
		     sectiontypes/padding.c \
		     sectiontypes/metadata.h \
		     sectiontypes/metadata_types.h \
		     sectiontypes/metadata.c \
		     sectiontypes/pixelfmt.h \
		     sectiontypes/pixelfmt_types.h \
		     sectiontypes/pixelfmt.c \
		     checksum.h \
		     checksum.c

# Public headers.
include_HEADERS = epai.h \
		  error.h \
		  generic_section.h \
		  file.h \
		  encoder.h \
		  decoder.h \
		  sectiontypes/file_signature.h \
		  sectiontypes/file_signature_types.h \
		  sectiontypes/padding.h \
		  sectiontypes/padding_types.h \
		  sectiontypes/metadata.h \
		  sectiontypes/metadata_types.h \
		  sectiontypes/pixelfmt.h \
		  sectiontypes/pixelfmt_types.h \
		  checksum.h
